// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > scenario should handle add bundle 1`] = `
Object {
  "bundles": Array [
    Object {
      "_id": "1",
    },
  ],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [],
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle add scenario 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [],
  "scenarios": Array [
    Object {
      "_id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "_id": "1",
    },
  },
}
`;

exports[`reducers > scenario should handle default state 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [],
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle delete bundle 1`] = `
Object {
  "bundles": Array [],
}
`;

exports[`reducers > scenario should handle delete modification 1`] = `
Object {
  "modifications": Array [],
}
`;

exports[`reducers > scenario should handle delete scenario 1`] = `
Object {
  "currentScenario": undefined,
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle log out 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [],
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set bundle 1`] = `
Object {
  "bundles": Array [
    Object {
      "_id": "1",
    },
  ],
  "currentScenario": Object {},
}
`;

exports[`reducers > scenario should handle set bundles 1`] = `
Object {
  "bundles": Array [
    Object {
      "_id": "1",
    },
  ],
  "currentScenario": Object {
    "bundleId": "1",
  },
}
`;

exports[`reducers > scenario should handle set feeds 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [
    Object {
      "_id": "1",
    },
  ],
  "feedsById": Object {
    "1": Object {
      "_id": "1",
    },
  },
  "modifications": Array [],
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set modification 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [],
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set modifications 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [
    Object {
      "_id": "1",
      "type": "adjust-dwell-time",
    },
  ],
  "scenarios": Array [],
  "scenariosById": Object {},
}
`;

exports[`reducers > scenario should handle set scenario 1`] = `
Object {
  "bundles": Array [
    Object {
      "_id": "1",
    },
  ],
  "currentScenario": Object {
    "_id": "1",
    "bundleId": "1",
  },
  "scenarios": Array [
    Object {
      "_id": "1",
      "bundleId": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "_id": "1",
      "bundleId": "1",
    },
  },
}
`;

exports[`reducers > scenario should handle set scenarios 1`] = `
Object {
  "bundles": Array [],
  "feeds": Array [],
  "feedsById": Object {},
  "modifications": Array [],
  "scenarios": Array [
    Object {
      "_id": "1",
    },
  ],
  "scenariosById": Object {
    "1": Object {
      "_id": "1",
    },
  },
}
`;

exports[`reducers > scenario should handle show variant 1`] = `
Object {
  "modifications": Array [
    Object {
      "_id": "1",
      "showOnMap": undefined,
      "type": "adjust-dwell-time",
      "variants": Array [],
    },
  ],
}
`;
